# PiRayTracer

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  arm-linux-gnueabihf-toolchain.cmake
include/: canvas.h  color.h  intersection.h  light.h  material.h  matrix.h  ray.h  transformation.h  tuple.h  world.h
include/shapes/: shape.h  sphere.h
include/support/: utils.h
src/: CMakeLists.txt  PiRayTracer.cpp  tuple.cpp  utils.cpp
src/modules/: canvas.cpp  intersection.cpp  material.cpp  matrix.cpp  ray.cpp  transformation.cpp  tuple.cpp  world.cpp
src/modules/shapes/: shape.cpp  sphere.cpp
src/support/: utils.cpp
template_files/: module.cpp  module.h  moduleTester.cpp
tests/: CMakeLists.txt  canvasTester.cpp  chap1Tester.cpp  chap1_2Tester.cpp  chapEndTester.cpp  colorTester.cpp  intersectionTester.cpp  mainTester.cpp  materialTester.cpp  matrixTester.cpp  rayTester.cpp  sphereTester.cpp  transformationTester.cpp  tupleTester.cpp  worldTester.cpp
